Update index.html & Game.js

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,9 @@
 <noscript>
     You need to enable JavaScript to run this app.
 </noscript>
+To use remote controller, Go to <b>'netrol.com/tx'</b> on your phone's web browser!
 <div id="root"></div>
+<a href="http://netrol.com/ttt">Restart the game</a>
 <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
